--- a/site-institucional/Login/login.html
+++ b/site-institucional/Login/login.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+
     <div class="login">
-        <img src="img/user.png" class="usuario" width="100" height="100" alt="">
+        <img src="https://png.pngtree.com/png-vector/20190909/ourmid/pngtree-outline-user-icon-png-image_1727916.jpg" class="usuario" width="100" height="100" alt="">
         <h1>Login</h1>
         <form>
 
@@ -25,6 +26,7 @@
 
         </form>
     </div>
+
 
 
 </body>
