--- a/site-institucional/Login e Cadastro/cadastro.html
+++ b/site-institucional/Login e Cadastro/cadastro.html
@@ -2,28 +2,27 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/cadastro.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
 
-    <div class="login">
+    <div class="cadastro">
         <img src="https://png.pngtree.com/png-vector/20190909/ourmid/pngtree-outline-user-icon-png-image_1727916.jpg" class="usuario" width="100" height="100" alt="">
-        <h1>Login</h1>
+        <h1>Cadastro</h1>
         <form>
 
             <p>Usuário</p>
-            <input type="text" name="" placeholder="Insira seu nome de usuário">
+            <input type="text" name="" placeholder="Insira o nome de usuario">
             <p>Senha</p>
             <input type="password" name="" placeholder="Insira sua senha">
-            <input type="submit" name="" value="Login">
-            <a href="#">Esqueceu sua senha?</a><br>
-            <a href="#">Ainda não possuia cadastro?</a>
-
+            <p>E-mail</p>
+            <input type="email" name="" placeholder="Insira seu e-mail">
+            <input type="submit" value="Cadastrar">
         </form>
     </div>
 
