--- a/site-institucional/Login e Cadastro/cadastro.html
+++ b/site-institucional/Login e Cadastro/cadastro.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="cadastro">
-        <img src="https://png.pngtree.com/png-vector/20190909/ourmid/pngtree-outline-user-icon-png-image_1727916.jpg" class="usuario" width="100" height="100" alt="">
+        <img src="imgs/Logotipo - Grupo 10.png" class="usuario" width="300" height="100" alt="">
         <h1>Cadastro</h1>
         <form>
 
