Trocas e adições na navbar
estilizei a navbar, adcionei hover e troquei o fundo da main

--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -14,8 +14,7 @@
     <header class="navbar">
       <div class="container2">
         <div class="logo">
-          <img src="../imagens/logotipo - Grupo 10.jpg" width="100px" alt="">
-          <h1>FADE Solution</h1>
+          <img src="../imagens/Logotipo - Grupo 10.png" width="100px" alt="">
          
         </div>
         <ul>
