Adcionei um novo estilo a navbar e um modelo de documento sobre nós para analisarem

--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -69,12 +69,20 @@
                 <h5>Monitoramento eficaz</h5>
   
                 <img src="../pagina-inicial/imagens/monitoramento.jpeg" class="imagemNegocio" alt="">
+
+                <p>Nós entregamos o melhor monitoramento para todo tipo de maquina<br>
+                presente na sua lanchonete, e conforme o seu interesse, entregamos o melhor serviço
+                </p>
               
               </div>
               <div class="quadro">
   
                 <h5>Velocidade na solução de problemas</h5>
                 <img src="../pagina-inicial/imagens/velocidade.jpeg" class="imagemNegocio" alt="">
+
+                <p>Trazemos com relatórios constantes e forte observações as tecnologias utilizada, <br>
+                as melhores soluções para problemas técnicos.
+                </p>
   
               </div>
   
@@ -83,6 +91,11 @@
                 <h5>Analises e relatórios sobre o desempenho do seu negócio</h5>
   
                 <img src="../pagina-inicial/imagens/negocio.jpeg" class="imagemNegocio1" height="100px" alt="">
+
+                <p>
+                  Tambem trabalhamos com um grafico de desempenho para que você tenha uma boa visão <br>
+                  de tudo que acontece no seu negócio e possa tomar a melhor decisão.
+                </p>
               
               </div>
           </div>  
