--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/negocio.css">
     <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/sobre.css">
 
     <script>
       window.onload = function(e) {
@@ -59,7 +60,7 @@
       <div class="negocio">
         <div class="container">
   
-          <h2 class="titulo">Qual a importancia do nosso negócio para seu negócio?</h2>
+          <h2>Qual a importancia do nosso negócio para seu negócio?</h2>
   
           <div class="negocioBox">
   
@@ -85,7 +86,7 @@
                 </p>
   
               </div>
-  
+   
               <div class="quadro">
   
                 <h5>Analises e relatórios sobre o desempenho do seu negócio</h5>
@@ -101,6 +102,20 @@
           </div>  
         </div>
       </div>
+      <div class="container">
+        <div class="sobre">
+          <h3>Qual nossa motivação</h3>
+
+          <p class="p1">Nós da Fade, trazemos muitas opções para quem quer manter o bom controle do seu negócio, <br> e de como seu recurso pode ser aplicado conforme o passar do tempo, com o oferecimento <br> do melhor monitoramento a distancia com uma equipe preparada e utilizando a melhor tecnologia disponível <br> para a atuação na área. </p>
+
+          <br>
+
+          <p class="p2">
+            As melhores redes de fast food podem contar conosco como uma base de apoio <br> e satisfação de seus clientes, já que nossa atuação de mercado é visada também nessa área de experiencia <br> do usuário com a nossa tecnologia e da velocidade em seu atendimento, para que sempre retornem, <br> e assim dando sentido a parceria que fazemos com essas redes.
+          </p>
+
+        </div>
+      </div>  
     </main>
 
    
