Login/Cadastro/index
Arrumei um bug no qual nossa motivação, adicionei navbar no login e cadastro e linkei todos

--- a/site-institucional/Login e Cadastro/cadastro.html
+++ b/site-institucional/Login e Cadastro/cadastro.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <header class="navbar">
+        <div class="container2">
+          <div class="logo">
+            <img src="./imagens/Logotipo - Grupo 10.png" width="100px" alt="">
+           
+          </div>
+          <ul>
+              <li><a href="../pagina-inicial/index.html">Home</a></li>
+              <li><a href="../Login e Cadastro/login.html">Login</a></li>
+              <li><a href="../Login e Cadastro/cadastro.html">Contato</a></li>
+          </ul>
+  
+        </div> 
+             
+          </div>
+      </header> 
 
     <div class="cadastro">
         <img src="imgs/Logotipo - Grupo 10.png" class="usuario" width="300" height="100" alt="">
