--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -37,8 +37,8 @@
         </div>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="../Login e Cadastro/login.html">Login</a></li>
+            <li><a href="../Login e Cadastro/cadastro.html">Contato</a></li>
         </ul>
 
       </div> 
@@ -102,17 +102,11 @@
           </div>  
         </div>
       </div>
+      <h3 class="motivacao">Qual nossa motivação</h3>
       <div class="container">
         <div class="sobre">
-          <h3>Qual nossa motivação</h3>
-
-          <p class="p1">Nós da Fade, trazemos muitas opções para quem quer manter o bom controle do seu negócio, <br> e de como seu recurso pode ser aplicado conforme o passar do tempo, com o oferecimento <br> do melhor monitoramento a distancia com uma equipe preparada e utilizando a melhor tecnologia disponível <br> para a atuação na área. </p>
-
-          <br>
-
-          <p class="p2">
-            As melhores redes de fast food podem contar conosco como uma base de apoio <br> e satisfação de seus clientes, já que nossa atuação de mercado é visada também nessa área de experiencia <br> do usuário com a nossa tecnologia e da velocidade em seu atendimento, para que sempre retornem, <br> e assim dando sentido a parceria que fazemos com essas redes.
-          </p>
+          Nós da Fade, trazemos muitas opções para quem quer manter o bom controle do seu negócio, e de como seu recurso pode ser aplicado conforme o passar do tempo, com o oferecimento do melhor monitoramento a distancia com uma equipe preparada e utilizando a melhor tecnologia disponível  para a atuação na área.
+          <p></p>As melhores redes de fast food podem contar conosco como uma base de apoio  e satisfação de seus clientes, já que nossa atuação de mercado é visada também nessa área de experiencia do usuário com a nossa tecnologia e da velocidade em seu atendimento, para que sempre retornem, e assim dando sentido a parceria que fazemos com essas redes.
 
         </div>
       </div>  
