--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -53,6 +53,7 @@
       <div class="banner">
         
         <div class="bannerBox">
+          <img src="" alt="">
            <h1>SEJA BEM VINDO <br> A <span>FADE SOLUTIONS</span></h1>
         </div>
       </div>
