Placeholder no contato

--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -125,18 +125,15 @@
         <form>
           <fieldset class="grupo">
             <div class="campo">
-              <label>Empresa</label>
-              <input type="text" name="nome" id="nome">
+              <input type="text" name="nome" id="nome" placeholder="Empresa">
             </div>
             <div class="campo">
-              <label>CPNJ</label>
-              <input type="text" name="sobrenome" id="sobrenome">
+              <input type="text" name="sobrenome" id="sobrenome" placeholder="CNPJ">
             </div>
 
           </fieldset>
           <div class="campo">
-            <label>Email para contato</label>
-            <input type="email">
+            <input type="email" placeholder="Email">
           </div>
           <div class="campo">
             <button class="btn">Enviar</button>
