--- a/Site-Pi/Index.html
+++ b/Site-Pi/Index.html
@@ -8,13 +8,14 @@
     <title>Fade solutions</title>
   </head>
   <body>
+    <!-- NAVBAR -->
     <header>
       <img
         src="Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
-        width="250px"
-        height="100px"
+        width="200px"
+        height="80px"
       />
       <nav>
         <ul class="nav-links">
@@ -25,5 +26,13 @@
       </nav>
       <a class="cta" href="#"><button>Contact</button></a>
     </header>
+    <!-- NAVBAR -->
+    <!-- BANNER -->
+    <section>
+      <div class="banner">
+        <img src="icon_and_graphics_2.gif" />
+      </div>
+    </section>
+    <!-- BANNER -->
   </body>
 </html>
