--- a/Site-Pi/Index.html
+++ b/Site-Pi/Index.html
@@ -30,7 +30,7 @@
     <!-- BANNER -->
     <section>
       <div class="banner">
-        <img src="icon_and_graphics_2.gif" />
+        <img src="giphy.gif" />
       </div>
     </section>
     <!-- BANNER -->
