--- a/Site-Pi/Index.html
+++ b/Site-Pi/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Index.css" />
+    <link rel="stylesheet" href="./css/Index.css" />
     <title>Fade solutions</title>
   </head>
   <body>
@@ -62,7 +62,12 @@
             /></a>
           </li>
           <li>
-            <a href="#"><img src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png" width="50px" height="50px" /></a>
+            <a href="#"
+              ><img
+                src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png"
+                width="50px"
+                height="50px"
+            /></a>
           </li>
         </ul>
       </nav>
