comentei todo o codigo

--- a/site-institucional/pagina-inicial/index.html
+++ b/site-institucional/pagina-inicial/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="./CSS/sobre.css">
 
   <script>
+
+    //script da navbar fixa
     window.onload = function (e) {
       var offset = document.getElementsByClassName('navbar')[0].offsetTop;
       var menu = document.getElementsByClassName('navbar')[0];
