--- a/site-institucional/Login/Login.html
+++ b/site-institucional/Login/Login.html
@@ -45,9 +45,9 @@
             <h2>LOGIN NO SISTEMA</h2><br>
                 <form id="form_login" method="post" onsubmit="return login()">
                     <p>E-mail</p>
-                    <input name="login">
+                    <input name="login" placeholder="Ex:fadesolutions@gmail.com">
                     <p>Senha</p>              
-                    <input name="loja">
+                    <input name="senha" placeholder="Ex:123456">
                     <button type="submit">LOGIN</button>
                     <div class="divSenha">
                     <button type="submit">Esqueceu a senha?</button>
