--- a/site-institucional/Login/Login.html
+++ b/site-institucional/Login/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login - Fade</title>
-    <link rel="stylesheet" href="../login/css/cadastro.css">
+    <link rel="stylesheet" href="../login/css/login.css">
     <link rel="stylesheet" href="../Index/css/Index.css">
 
 
@@ -26,7 +26,7 @@
         <li><a href="#">Sobre nos</a></li>
       </ul>
     </nav>
-    <a class="cta" href="#"><button>Entrar</button></a>
+    <a class="cta" href="../Login/Login.html"><button>Entrar</button></a>
   </header>
   <!-- NAVBAR -->
   <!-- BANNER -->
@@ -45,20 +45,30 @@
             <h2>LOGIN NO SISTEMA</h2><br>
                 <form id="form_login" method="post" onsubmit="return login()">
                     <p>E-mail</p>
+                    <br>
                     <input name="login" placeholder="Ex:fadesolutions@gmail.com">
-                    <p>Senha</p>              
+                    <br>
+                    <p>Senha</p>
+                    <br>              
                     <input name="senha" placeholder="Ex:123456">
+                    <br>
                     <button type="submit">LOGIN</button>
                     <div class="divSenha">
+                      <br>
                     <button type="submit">Esqueceu a senha?</button>
+                    <br>
+                    <br>
+                    <span>                     
+                    <button type="submit"><a href="?>"><a href="../Cadastro/Cadastro.html">Não possui cadastro?</a></button>
+                  </span>
                   </div>
                 </form>
         </div>
     </div>
 
-    <header>
+    <header class="header1">
         <img
-          src="../"
+          src="imagens/Logotipo.png"
           alt="logo"
           class="logo"
           width="200px"
@@ -69,7 +79,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-computer-icons-linkedin-logo-linkedin-white-5b4847a134e5e6.8998596715314635852167.png"
+                  src="imagens/facebook.png"
                   width="50px"
                   height="50px"
               /></a>
@@ -77,7 +87,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-facebook-computer-icons-logo-facebook-icon-5abb9662f0c326.8914343115222431709862.png"
+                  src="imagens/instagram.png"
                   width="50px"
                   height="50px"
               /></a>
@@ -85,7 +95,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png"
+                  src="imagens/linkedin.png"
                   width="50px"
                   height="50px"
               /></a>
