--- a/site-institucional/Cadastro/Cadastro.html
+++ b/site-institucional/Cadastro/Cadastro.html
@@ -26,7 +26,7 @@
         <li><a href="#">Sobre nos</a></li>
       </ul>
     </nav>
-    <a class="cta" href="#"><button>Entrar</button></a>
+    <a class="cta" href="../Login/Login.html"><button>Entrar</button></a>
   </header>
   <!-- NAVBAR -->
   <!-- BANNER -->
@@ -65,7 +65,7 @@
 
     <header>
         <img
-          src="../"
+          src="../Login/imagens/Logotipo.png"
           alt="logo"
           class="logo"
           width="200px"
@@ -76,7 +76,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-computer-icons-linkedin-logo-linkedin-white-5b4847a134e5e6.8998596715314635852167.png"
+                  src="../Login/imagens/facebook.png"
                   width="50px"
                   height="50px"
               /></a>
@@ -84,7 +84,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-facebook-computer-icons-logo-facebook-icon-5abb9662f0c326.8914343115222431709862.png"
+                  src="../Login/imagens/instagram.png"
                   width="50px"
                   height="50px"
               /></a>
@@ -92,7 +92,7 @@
             <li>
               <a href="#"
                 ><img
-                  src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png"
+                  src="../Login/imagens/linkedin.png"
                   width="50px"
                   height="50px"
               /></a>
