--- a/site-institucional/Index/Index.html
+++ b/site-institucional/Index/Index.html
@@ -34,6 +34,11 @@
       </div>
     </section>
     <!-- BANNER -->
+    <section class="secConteudo">
+      <div class="divDinheiro"></div>
+      <div></div>
+      <div></div>
+    </section>
     <!-- FOOTER -->
     <header>
       <img
