--- a/site-institucional/Index/Index.html
+++ b/site-institucional/Index/Index.html
@@ -35,9 +35,21 @@
     </section>
     <!-- BANNER -->
     <section class="secConteudo">
-      <div class="divDinheiro"></div>
-      <div></div>
-      <div></div>
+      <div class="divDinheiro">
+        <div class="divDinheiroImg">
+          <img src="" alt="" />
+        </div>
+      </div>
+      <div class="divMaozinha">
+        <div class="divMaozinhaImg">
+          <img src="" alt="" />
+        </div>
+      </div>
+      <div class="divJoinha">
+        <div class="divJoinhaImg">
+          <img src="" alt="" />
+        </div>
+      </div>
     </section>
     <!-- FOOTER -->
     <header>
