--- a/site-institucional/Index/Index.html
+++ b/site-institucional/Index/Index.html
@@ -11,7 +11,7 @@
     <!-- NAVBAR -->
     <header>
       <img
-        src="Logotipo - Grupo 10.png"
+        src="Imgs/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -39,22 +39,40 @@
         <div class="divDinheiroImg">
           <img src="" alt="" />
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          quam fugiat error qui quisquam debitis pariatur eligendi molestiae
+          asperiores maxime voluptatem mollitia deleniti? Quam suscipit dolores
+          sed error cupiditate id?
+        </p>
       </div>
       <div class="divMaozinha">
         <div class="divMaozinhaImg">
           <img src="" alt="" />
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          quam fugiat error qui quisquam debitis pariatur eligendi molestiae
+          asperiores maxime voluptatem mollitia deleniti? Quam suscipit dolores
+          sed error cupiditate id?
+        </p>
       </div>
       <div class="divJoinha">
         <div class="divJoinhaImg">
           <img src="" alt="" />
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          quam fugiat error qui quisquam debitis pariatur eligendi molestiae
+          asperiores maxime voluptatem mollitia deleniti? Quam suscipit dolores
+          sed error cupiditate id?
+        </p>
       </div>
     </section>
     <!-- FOOTER -->
     <header>
       <img
-        src="Logotipo - Grupo 10.png"
+        src="Imgs/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -65,7 +83,7 @@
           <li>
             <a href="#"
               ><img
-                src="kisspng-computer-icons-linkedin-logo-linkedin-white-5b4847a134e5e6.8998596715314635852167.png"
+                src="Imgs/instagram.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -73,7 +91,7 @@
           <li>
             <a href="#"
               ><img
-                src="kisspng-facebook-computer-icons-logo-facebook-icon-5abb9662f0c326.8914343115222431709862.png"
+                src="Imgs/linkedin.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -81,7 +99,7 @@
           <li>
             <a href="#"
               ><img
-                src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png"
+                src="Imgs/facebook.png"
                 width="50px"
                 height="50px"
             /></a>
