Form de contato

--- a/site-institucional/Index/Index.html
+++ b/site-institucional/Index/Index.html
@@ -67,6 +67,31 @@
           sed error cupiditate id?
         </p>
       </div>
+      <div>
+    </section>
+    <div class="divContato">
+    <p>
+      Entre em contato
+    </p>
+  </div>
+    <section class="secForm">
+      <form class="form">
+        <div class="divForm">
+        <fieldset>
+        <label>Nome</label>
+        <input type="text" name="nome" id="nome" placeholder="Ex:Gabriel Ortelan">
+          <label>Email</label>
+        <input type="email" name="email" id="email" placeholder="Ex:email@gmail.com">
+          <label>Telefone</label>
+        <input type="text" placeholder="Ex:+55(11)99999-9999">
+        <label>Empresa</label>
+        <input type="text" placeholder="Ex:Linx">
+        <br>
+        <button>Enviar</button>
+      </fieldset>
+      
+      </form>
+    </div>
     </section>
     <!-- FOOTER -->
     <header>
