--- a/site-institucional/Index/Index.html
+++ b/site-institucional/Index/Index.html
@@ -24,7 +24,7 @@
           <li><a href="#">Sobre nos</a></li>
         </ul>
       </nav>
-      <a class="cta" href="#"><button>Entrar</button></a>
+      <a class="cta" href="../Login/Login.html"><button>Entrar</button></a>
     </header>
     <!-- NAVBAR -->
     <!-- BANNER -->
@@ -37,6 +37,7 @@
     <section class="secConteudo">
       <div class="divDinheiro">
         <div class="divDinheiroImg">
+          <img src="Imgs/money1.png" alt="">
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
@@ -47,7 +48,7 @@
       </div>
       <div class="divMaozinha">
         <div class="divMaozinhaImg">
-          <img src="" alt="" />
+          <img src="Imgs/aperto-de-mao (1).png" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
@@ -58,7 +59,7 @@
       </div>
       <div class="divJoinha">
         <div class="divJoinhaImg">
-          <img src="" alt="" />
+          <img src="Imgs/gostar.png" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
