Login e cadastro detalhes

--- a/site-institucional/Login/Login.html
+++ b/site-institucional/Login/Login.html
@@ -57,44 +57,44 @@
     </div>
 
     <header>
-        <img
-          src="../"
-          alt="logo"
-          class="logo"
-          width="200px"
-          height="80px"
-        />
-        <nav>
-          <ul class="nav-links">
-            <li>
-              <a href="#"
-                ><img
-                  src="kisspng-computer-icons-linkedin-logo-linkedin-white-5b4847a134e5e6.8998596715314635852167.png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="kisspng-facebook-computer-icons-logo-facebook-icon-5abb9662f0c326.8914343115222431709862.png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="kisspng-scalable-vector-graphics-clip-art-instagram-png-file-5a75716ab5b203.3937501115176461867442 (1).png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-          </ul>
-        </nav>
-        <a class="cta" href="#"><button>Contato</button></a>
-      </header>
-      <!-- FOOTER -->
+      <img
+        src="../pagina-inicial/imagens/Logotipo - Grupo 10.png"
+        alt="logo"
+        class="logo"
+        width="200px"
+        height="80px"
+      />
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="#"
+              ><img
+                src="../Index/Imgs/instagram.png"
+                width="50px"
+                height="50px"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="../Index/Imgs/linkedin.png"
+                width="50px"
+                height="50px"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="../Index/Imgs/facebook.png"
+                width="60px"
+                height="50px"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+      <a class="cta" href="#"><button>Contato</button></a>
+    </header>
+    <!-- FOOTER -->
 
 
 </body>
