Detalhes telas atualizado

--- a/site-institucional/Login/Login.html
+++ b/site-institucional/Login/Login.html
@@ -34,7 +34,6 @@
    
   </section>
   <!-- BANNER -->
-  <!-- FOOTER -->
   
 </body>
 </html>
@@ -54,19 +53,18 @@
                     <br>
                     <button type="submit">LOGIN</button>
                     <div class="divSenha">
-                      <br>
+                    <br>
                     <button type="submit">Esqueceu a senha?</button>
                     <br>
-                    <br>
-                    <span>                     
-                    <button type="submit"><a href="?>"><a href="../Cadastro/Cadastro.html">Não possui cadastro?</a></button>
-                  </span>
+                    <br>                  
+                    <button type="submit"><a href="../Cadastro/Cadastro.html">Cadastre-se</a></button>          
                   </div>
                 </form>
         </div>
     </div>
 
-<<<<<<< HEAD
+<!-- FOOTER -->
+
     <header>
       <img
         src="../pagina-inicial/imagens/Logotipo - Grupo 10.png"
@@ -106,47 +104,6 @@
       <a class="cta" href="#"><button>Contato</button></a>
     </header>
     <!-- FOOTER -->
-=======
-    <header class="header1">
-        <img
-          src="imagens/Logotipo.png"
-          alt="logo"
-          class="logo"
-          width="200px"
-          height="80px"
-        />
-        <nav>
-          <ul class="nav-links">
-            <li>
-              <a href="#"
-                ><img
-                  src="imagens/facebook.png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="imagens/instagram.png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="imagens/linkedin.png"
-                  width="50px"
-                  height="50px"
-              /></a>
-            </li>
-          </ul>
-        </nav>
-        <a class="cta" href="#"><button>Contato</button></a>
-      </header>
-      <!-- FOOTER -->
->>>>>>> cc2d372abb0c2e761cd171ef200e6cfeccf297c1
 
 
 </body>
