--- a/site-institucional/Index.html
+++ b/site-institucional/Index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/Index.css" />
+    <link rel="stylesheet" href="../site-institucional/css/Index.css" />
     <title>Fade solutions</title>
   </head>
   <body>
     <!-- NAVBAR -->
     <header>
       <img
-        src="Imgs/Logotipo - Grupo 10.png"
+        src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -24,7 +24,7 @@
           <li><a href="#">Sobre nos</a></li>
         </ul>
       </nav>
-      <a class="cta" href="../Login/Login.html"><button>Entrar</button></a>
+      <a class="cta" href="../site-institucional/Login.html"><button>Entrar</button></a>
     </header>
     <!-- NAVBAR -->
     <!-- BANNER -->
@@ -37,7 +37,7 @@
     <section class="secConteudo">
       <div class="divDinheiro">
         <div class="divDinheiroImg">
-          <img src="Imgs/money1.png" alt="">
+          <img src="../site-institucional/Imagens/money1.png" alt="">
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
@@ -48,7 +48,7 @@
       </div>
       <div class="divMaozinha">
         <div class="divMaozinhaImg">
-          <img src="Imgs/aperto-de-mao (1).png" alt="" />
+          <img src="../site-institucional/Imagens/aperto-de-mao (1).png" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
@@ -59,7 +59,7 @@
       </div>
       <div class="divJoinha">
         <div class="divJoinhaImg">
-          <img src="Imgs/gostar.png" alt="" />
+          <img src="../site-institucional/Imagens/gostar.png" alt="" />
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
@@ -97,7 +97,7 @@
     <!-- FOOTER -->
     <header>
       <img
-        src="Imgs/Logotipo - Grupo 10.png"
+        src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -108,7 +108,7 @@
           <li>
             <a href="#"
               ><img
-                src="Imgs/instagram.png"
+                src="../site-institucional/Imagens/instagram.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -116,7 +116,7 @@
           <li>
             <a href="#"
               ><img
-                src="Imgs/linkedin.png"
+                src="../site-institucional/Imagens/facebook.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -124,7 +124,7 @@
           <li>
             <a href="#"
               ><img
-                src="Imgs/facebook.png"
+                src="../site-institucional/Imagens/linkedin.png"
                 width="50px"
                 height="50px"
             /></a>
