--- a/site-institucional/Login.html
+++ b/site-institucional/Login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login - Fade</title>
-    <link rel="stylesheet" href="../login/css/login.css">
-    <link rel="stylesheet" href="../Index/css/Index.css">
+    <link rel="stylesheet" href="../site-institucional/css/login.css">
+    <link rel="stylesheet" href="../site-institucional/css/Index.css">
 
 
 </head>
@@ -13,7 +13,7 @@
 <!-- NAVBAR -->
 <header>
     <img
-      src="../Login/imagens/Logotipo.png"
+      src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
       alt="logo"
       class="logo"
       width="170px"
@@ -21,12 +21,12 @@
     />
     <nav>
       <ul class="nav-links">
-        <li><a href="#">Serviço</a></li>
-        <li><a href="#">Nossa solução</a></li>
-        <li><a href="#">Sobre nos</a></li>
+        <li><a href="Index.html">Serviço</a></li>
+        <li><a href="Index.html">Nossa solução</a></li>
+        <li><a href="Sobre.html">Sobre nos</a></li>
       </ul>
     </nav>
-    <a class="cta" href="../Login/Login.html"><button>Entrar</button></a>
+    <a class="cta" href="..//site-institucional/Login.html"><button>Entrar</button></a>
   </header>
   <!-- NAVBAR -->
   <!-- BANNER -->
@@ -57,7 +57,7 @@
                     <button type="submit">Esqueceu a senha?</button>
                     <br>
                     <br>                  
-                    <button type="submit"><a href="../Cadastro/Cadastro.html">Cadastre-se</a></button>          
+                    <button type="submit"><a href="../site-institucional/Cadastro.html">Cadastre-se</a></button>          
                   </div>
                 </form>
         </div>
@@ -67,7 +67,7 @@
 
     <header>
       <img
-        src="../pagina-inicial/imagens/Logotipo - Grupo 10.png"
+        src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -78,7 +78,7 @@
           <li>
             <a href="#"
               ><img
-                src="../Index/Imgs/instagram.png"
+                src="../site-institucional/Imagens/instagram.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -86,7 +86,7 @@
           <li>
             <a href="#"
               ><img
-                src="../Index/Imgs/linkedin.png"
+                src="../site-institucional/Imagens/facebook.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -94,7 +94,7 @@
           <li>
             <a href="#"
               ><img
-                src="../Index/Imgs/facebook.png"
+                src="../site-institucional/Imagens/linkedin.png"
                 width="60px"
                 height="50px"
             /></a>
