Index link do gif atualziado

--- a/site-institucional/Index.html
+++ b/site-institucional/Index.html
@@ -30,7 +30,7 @@
     <!-- BANNER -->
     <section>
       <div class="banner">
-        <img src="giphy.gif" />
+        <img src="../site-institucional/Imagens/giphy.gif" />
       </div>
     </section>
     <!-- BANNER -->
