--- a/site-institucional/Cadastro.html
+++ b/site-institucional/Cadastro.html
@@ -6,6 +6,8 @@
     <title>Cadastro - Fade</title>
     <link rel="stylesheet" href="../site-institucional/css/cadastro.css">
     <link rel="stylesheet" href="../site-institucional/css/Index.css">
+    <link rel="sortcut icon" href="../site-institucional/Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
+
 
 
 </head>
