--- a/site-institucional/Index.html
+++ b/site-institucional/Index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../site-institucional/css/Index.css" />
+    <link rel="sortcut icon" href="../site-institucional/Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
     <title>Fade solutions</title>
   </head>
   <body>
     <!-- NAVBAR -->
     <header>
       <img
-        src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
-        alt="logo"
-        class="logo"
-        width="200px"
-        height="80px"
-      />
+      src="../site-institucional/Imagens/Logotipo - Grupo 10.png"
+      alt="logo"
+      class="logo"
+      width="170px"
+      height="60px"
+    />
       <nav>
         <ul class="nav-links">
           <li><a href="#">Serviço</a></li>
