--- a/site-institucional/Login.html
+++ b/site-institucional/Login.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login - Fade</title>
+    <link rel="sortcut icon" href="../site-institucional/Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
     <link rel="stylesheet" href="../site-institucional/css/login.css">
     <link rel="stylesheet" href="../site-institucional/css/Index.css">
+    
 
 
 </head>
