--- a/site-institucional/contato.html
+++ b/site-institucional/contato.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../site-institucional/css/contato.css">
+    <link rel="sortcut icon" href="../site-institucional/Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
+
     <title>Contato</title>
+
 </head>
 
 <body>
