--- a/projeto-site/public/Login.html
+++ b/projeto-site/public/Login.html
@@ -14,6 +14,7 @@
 
 <!-- NAVBAR -->
 <header>
+  <a href="Index.html">
     <img
       src="./Imagens/Logotipo - Grupo 10.png"
       alt="logo"
@@ -21,11 +22,13 @@
       width="170px"
       height="60px"
     />
+  </a>
     <nav>
       <ul class="nav-links">
         <li><a href="Index.html">Serviço</a></li>
-        <li><a href="Index.html">Nossa solução</a></li>
-        <li><a href="Sobre.html">Sobre nos</a></li>
+        <li><a href="Contato.html">Solução</a></li>
+        <li><a href="Index.html">Sobre nos</a></li>
+        <li><a href="Sobre.html">Contato</a></li>
       </ul>
     </nav>
     <a class="cta" href="./Login.html"><button>Entrar</button></a>
@@ -65,47 +68,6 @@
         </div>
     </div>
 
-<!-- FOOTER -->
-
-    <header>
-      <img
-        src="./Imagens/Logotipo - Grupo 10.png"
-        alt="logo"
-        class="logo"
-        width="200px"
-        height="80px"
-      />
-      <nav>
-        <ul class="nav-links">
-          <li>
-            <a href="#"
-              ><img
-                src="./Imagens/instagram.png"
-                width="50px"
-                height="50px"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./Imagens/facebook.png"
-                width="50px"
-                height="50px"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./Imagens/linkedin.png"
-                width="60px"
-                height="50px"
-            /></a>
-          </li>
-        </ul>
-      </nav>
-      <a class="cta" href="#"><button>Contato</button></a>
-    </header>
-    <!-- FOOTER -->
 
 
 </body>
