Links e pastas atualizadas

--- a/projeto-site/public/Dashboard.html
+++ b/projeto-site/public/Dashboard.html
@@ -19,7 +19,7 @@
     <!--NAVBAR-->
     <header>
       <img
-        src="../Imagens/Logotipo - Grupo 10.png"
+        src="./Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="170px"
@@ -27,13 +27,13 @@
       />
       <nav>
         <ul class="nav-links">
-          <li><a href="#secConteudo">Serviço</a></li>
-          <li><a href="Contato.html">Solução</a></li>
+          <li><a href="Index.html">Serviço</a></li>
+          <li><a href="Index.html">Solução</a></li>
           <li><a href="#">Sobre nos</a></li>
           <li><a href="Contato.html">Contato</a></li>
         </ul>
       </nav>
-      <a class="cta" href="../public/Login.html"><a style="margin-top: 10px;"><img src="../Imagens/user.png" alt="" width="40px" height="40px"></a>
+      <a class="cta" href="../public/Login.html"><a style="margin-top: 10px;"><img src="./Imagens/user.png" alt="" width="40px" height="40px"></a>
     </header>
     <!--NAVBAR-->
     <br /><br />
