--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -20,8 +20,8 @@
     />
       <nav>
         <ul class="nav-links">
-          <li><a href="#secConteudo">Serviço</a></li>
-          <li><a href="Contato.html">Solução</a></li>
+          <li><a href="Index.html">Serviço</a></li>
+          <li><a href="#secConteudo">Solução</a></li>
           <li><a href="#">Sobre nos</a></li>
           <li><a href="Contato.html">Contato</a></li>
           
@@ -45,13 +45,11 @@
           <br><br><br><br>
           <div class="contSolucaoCont">
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id dicta molestiae labore ipsa, inventore impedit magni provident aspernatur illo, nihil autem voluptates consequuntur excepturi facere modi. Non, consectetur? Veritatis, rerum?
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum nam repellat similique porro in fuga cupiditate nesciunt. Rerum cum labore illo, officia mollitia nulla ullam, accusamus repellendus dolorem laboriosam enim.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum architecto maxime, consequatur alias eligendi voluptatem enim eius nesciunt aliquam, hic rem impedit, officiis cumque similique obcaecati. Velit veritatis nesciunt libero.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, recusandae natus animi culpa quod facilis doloribus neque quae omnis et nisi quisquam, quos tempora hic ipsum, totam corrupti. Necessitatibus, sapiente.
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium id consequatur dolorem, soluta nisi quasi voluptatum beatae mollitia expedita perspiciatis animi harum debitis repellat sequi voluptate, corporis alias, doloremque ab.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex praesentium, error doloremque amet labore ut, suscipit unde hic id totam, ullam blanditiis quaerat eum laboriosam. Nam minima exercitationem quas alias?
-
+              Nós da empresa Fade busca em meio a tecnologia, trazer para nossos usuarios o melhor em monitoramento, 
+              com monitoramentos visualmente facil de acompanhar em dashboards, assim facilitando com que o usuario
+              venha observar suas maquinas, monitoramos qualquer maquina do ramo de empresas de fastfood, com 
+              velocidade no sistema e objetividade, alem disso tudo, também nossa empresa lhe beneficia muito
+              financeiramente, reduzindo a quantidade de reparo em máquinas e a desistencia de clientes.
             </p>
           
         </div>
