--- a/projeto-site/public/contato.html
+++ b/projeto-site/public/contato.html
@@ -22,7 +22,7 @@
         <nav>
           <ul class="nav-links">
             <li><a href="Index.html">Serviço</a></li>
-            <li><a href="Contato.html">Solução</a></li>
+            <li><a href="Index.html">Solução</a></li>
             <li><a href="#">Sobre nos</a></li>
             <li><a href="Contato.html">Contato</a></li>
           </ul>
