--- a/projeto-site/public/Dashboard.html
+++ b/projeto-site/public/Dashboard.html
@@ -36,6 +36,7 @@
       <a class="cta" href="../public/Login.html"><a style="margin-top: 10px;"><img src="./Imagens/user.png" alt="" width="40px" height="40px"></a>
     </header>
     <!--NAVBAR-->
+    <section
     <br /><br />
 
 
