--- a/projeto-site/public/Cadastro.html
+++ b/projeto-site/public/Cadastro.html
@@ -26,8 +26,8 @@
     <nav>
       <ul class="nav-links">
         <li><a href="Index.html">Serviço</a></li>
-        <li><a href="Contato.html">Solução</a></li>
-        <li><a href="Index.html">Sobre nos</a></li>
+        <li><a href="Index.html">Solução</a></li>
+        <li><a href="sobre.html">Sobre nos</a></li>
         <li><a href="Contato.html">Contato</a></li>
       </ul>
     </nav>
