--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -22,7 +22,7 @@
         <ul class="nav-links">
           <li><a href="Index.html">Serviço</a></li>
           <li><a href="#secConteudo">Solução</a></li>
-          <li><a href="#">Sobre nos</a></li>
+          <li><a href="Sobre.html">Sobre nos</a></li>
           <li><a href="Contato.html">Contato</a></li>
           
         </ul>
