--- a/projeto-site/public/Login.html
+++ b/projeto-site/public/Login.html
@@ -26,12 +26,12 @@
     <nav>
       <ul class="nav-links">
         <li><a href="Index.html">Serviço</a></li>
-        <li><a href="Contato.html">Solução</a></li>
-        <li><a href="Index.html">Sobre nos</a></li>
-        <li><a href="Sobre.html">Contato</a></li>
+        <li><a href="Index.html">Solução</a></li>
+        <li><a href="Sobre.html">Sobre nos</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
-    <a class="cta" href="./Login.html"><button>Entrar</button></a>
+    <a class="cta" href="./Cadastro.html"><button>Entrar</button></a>
   </header>
   <!-- NAVBAR -->
   <!-- BANNER -->
