--- a/projeto-site/public/Dashboard.html
+++ b/projeto-site/public/Dashboard.html
@@ -29,17 +29,15 @@
         <ul class="nav-links">
           <li><a href="Index.html">Serviço</a></li>
           <li><a href="Index.html">Solução</a></li>
-          <li><a href="#">Sobre nos</a></li>
+          <li><a href="Sobre.html">Sobre nos</a></li>
           <li><a href="Contato.html">Contato</a></li>
         </ul>
       </nav>
       <a class="cta" href="../public/Login.html"><a style="margin-top: 10px;"><img src="./Imagens/user.png" alt="" width="40px" height="40px"></a>
     </header>
     <!--NAVBAR-->
-    <section
-    <br /><br />
-
-
+    <section>
+    <br/><br/>
 
 	<section>
 	</section>
