--- a/projeto-site/public/contato.html
+++ b/projeto-site/public/contato.html
@@ -23,7 +23,7 @@
           <ul class="nav-links">
             <li><a href="Index.html">Serviço</a></li>
             <li><a href="Index.html">Solução</a></li>
-            <li><a href="#">Sobre nos</a></li>
+            <li><a href="Sobre.html">Sobre nos</a></li>
             <li><a href="Contato.html">Contato</a></li>
           </ul>
         </nav>
