--- a/projeto-site/public/Sobre.html
+++ b/projeto-site/public/Sobre.html
@@ -27,6 +27,7 @@
           <li><a href="Contato.html">Contato</a></li>    
         </ul>
     </nav>
+    <a class="cta" href="../public/Login.html"><button>Entrar</button></a>
 </header>
     
 <!-- Integrantes -->
