--- a/projeto-site/public/Sobre.html
+++ b/projeto-site/public/Sobre.html
@@ -85,7 +85,7 @@
     </div>
     <div class="descricao">
         <h1>Guilherme Soares</h1>
-        <h2>Scrum Master e Desenvolvedora Full Stack</h2>
+        <h2>Scrum Master e Desenvolvedor Full Stack</h2>
     </div>
 </div>
 </center>
