--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -34,6 +34,7 @@
     <section>
       <div class="banner">
         <img src="../public/Imagens/giphy.gif" />
+        <h1></h1>
       </div>
     </section>
     <!-- BANNER -->
@@ -59,8 +60,8 @@
     <!--Serviço-->
     <section class="secConteudo" id="secConteudo">
       <div class="divDinheiro">
-        <div class="divDinheiroImg">
-          <img src="../public/Imagens/money1.png" alt="">
+        <div class="divJoinhaImg">
+          <img src="../public/Imagens/money1.png" alt="" width="138px">
         </div>
         <p>
          Nossa solução lhe beneficia muito financeiramente, reduzindo
@@ -68,8 +69,8 @@
         </p>
       </div>
       <div class="divMaozinha">
-        <div class="divMaozinhaImg">
-          <img src="../public/Imagens/aperto-de-mao (1).png" alt="" />
+        <div class="divJoinhaImg">
+          <img src="../public/Imagens/aperto-de-mao (1).png" alt="" width="164px" />
         </div>
         <p>
          Ao fecharmos negócio a instalação do sistema e a parceiria começará
@@ -79,7 +80,7 @@
       </div>
       <div class="divJoinha">
         <div class="divJoinhaImg">
-          <img src="../public/Imagens/gostar.png" alt="" />
+          <img src="../public/Imagens/gostar.png" alt="" width="138px"/>
         </div>
         <p>
           Assim que nossos sitemas estiverem funcionando, os bons resultados
