--- a/projeto-site/public/Login.html
+++ b/projeto-site/public/Login.html
@@ -56,7 +56,7 @@
                     <br>              
                     <input name="senha" placeholder="Ex:123456">
                     <br>
-                    <button type="submit">Login</button>
+                    <a href="Dashboard/index.html"><button type="submit">Login</button></a>
                     <div class="divSenha">
                     <br>
                     <button type="submit">Esqueceu a senha?</button>
